fixing spacing for speaker bio

--- a/assets/styles/pages/_events.scss
+++ b/assets/styles/pages/_events.scss
@@ -45,6 +45,10 @@
 .event__speaker h3 {
     font-size: $font-size-24;
 }
+.event__speaker p {
+    margin-bottom: $spacing-8;
+}
+
 .events-single-layout ul {
         margin-left: 40px;
         margin-bottom: 32px;
